# cinnamon-settings-daemon

./: .gitignore  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README.md  README.rst  acinclude.m4  aclocal.m4  autogen.sh  cinnamon-settings-daemon.pot  config.h.in  configure  configure.ac  cs_themes.py  makepot  meson.build  meson_options.txt
.pc/16_use_synchronous_notifications.patch/: configure.ac
cinnamon-settings-daemon/: Makefile.am  Makefile.in  cinnamon-settings-manager.c  cinnamon-settings-manager.h  cinnamon-settings-module.c  cinnamon-settings-module.h  cinnamon-settings-plugin-info.c  cinnamon-settings-plugin-info.h  cinnamon-settings-plugin.c  cinnamon-settings-plugin.h  cinnamon-settings-profile.c  cinnamon-settings-profile.h  cinnamon-settings-session.c  cinnamon-settings-session.h  main.c  meson.build
data/: Makefile.am  Makefile.in  cinnamon-settings-daemon-uninstalled.pc.in  cinnamon-settings-daemon.1  cinnamon-settings-daemon.convert  cinnamon-settings-daemon.desktop.in.in  cinnamon-settings-daemon.pc.in  csd-enums.h  gnome-settings-daemon.pc.in  gsd-enums.h  meson.build  org.cinnamon.settings-daemon.peripherals.gschema.xml.in.in  org.cinnamon.settings-daemon.peripherals.wacom.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.background.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.color.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.housekeeping.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.keyboard.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.media-keys.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.orientation.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.power.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.print-notifications.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.sharing.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.updates.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.usb-protection.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.xrandr.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.xsettings.gschema.xml.in.in  org.gnome.settings-daemon.peripherals.gschema.xml.in.in  org.gnome.settings-daemon.plugins.color.gschema.xml.in.in  org.gnome.settings-daemon.plugins.gschema.xml.in.in  org.gnome.settings-daemon.plugins.keyboard.gschema.xml.in.in
gnome-settings-daemon/: Makefile.am  gnome-settings-plugin-info.c  gnome-settings-plugin-info.h  gnome-settings-plugin.c  gnome-settings-profile.h  gnome-settings-session.h  main.c
plugins/: Makefile.am  Makefile.in  meson.build
plugins/a11y-keyboard/: Makefile.am  Makefile.in  a11y-keyboard.cinnamon-settings-plugin.in  a11y-keyboard.gnome-settings-plugin.in  cinnamon-settings-daemon-a11y-keyboard.desktop.in  csd-a11y-keyboard-manager.c  csd-a11y-keyboard-manager.h  csd-a11y-keyboard-plugin.c  csd-a11y-keyboard-plugin.h  csd-a11y-preferences-dialog.c  csd-a11y-preferences-dialog.h  gsd-a11y-keyboard-manager.c  gsd-a11y-keyboard-plugin.c  gsd-a11y-keyboard-plugin.h  gsd-a11y-preferences-dialog.c  gsd-a11y-preferences-dialog.h  main.c  meson.build  test-a11y-keyboard.c  test-a11y-preferences-dialog.c
plugins/a11y-settings/: Makefile.am  Makefile.in  a11y-settings.cinnamon-settings-plugin.in  a11y-settings.gnome-settings-plugin.in  cinnamon-settings-daemon-a11y-settings.desktop.in  csd-a11y-settings-manager.c  csd-a11y-settings-manager.h  csd-a11y-settings-plugin.c  csd-a11y-settings-plugin.h  gsd-a11y-settings-manager.c  gsd-a11y-settings-manager.h  gsd-a11y-settings-plugin.c  gsd-a11y-settings-plugin.h  main.c  meson.build  test-a11y-settings.c
plugins/automount/: Makefile.am  Makefile.in  automount.cinnamon-settings-plugin.in  cinnamon-fallback-mount-helper.c  cinnamon-fallback-mount-helper.desktop.in.in  cinnamon-settings-daemon-automount.desktop.in  csd-automount-manager.c  csd-automount-manager.h  csd-automount-plugin.c  csd-automount-plugin.h  csd-automount.desktop.in  csd-autorun.c  csd-autorun.h  gnome-fallback-mount-helper.c  gnome-fallback-mount-helper.desktop.in.in  gsd-automount-manager.c  gsd-automount-manager.h  gsd-autorun.c  gsd-autorun.h  main.c  meson.build  test-automount-dialog.c  test-automount.c
plugins/background/: Makefile.am  Makefile.in  background.cinnamon-settings-plugin.in  background.gnome-settings-plugin.in  cinnamon-settings-daemon-background.desktop.in  csd-background-manager.c  csd-background-manager.h  csd-background-plugin.c  csd-background-plugin.h  gsd-background-manager.c  gsd-background-plugin.c  gsd-background-plugin.h  main.c  meson.build  monitor-background.c  monitor-background.h  test-background.c
plugins/clipboard/: Makefile.am  Makefile.in  cinnamon-settings-daemon-clipboard.desktop.in  clipboard.cinnamon-settings-plugin.in  clipboard.gnome-settings-plugin.in  csd-clipboard-manager.c  csd-clipboard-manager.h  csd-clipboard-plugin.c  csd-clipboard-plugin.h  gsd-clipboard-manager.c  gsd-clipboard-manager.h  gsd-clipboard-plugin.c  gsd-clipboard-plugin.h  main.c  meson.build  test-clipboard.c
plugins/color/: Makefile.am  Makefile.in  ccm-edid.c  ccm-edid.h  ccm-self-test.c  cinnamon-settings-daemon-color.desktop.in  color.cinnamon-settings-plugin.in  color.gnome-settings-plugin.in  csd-color-calibrate.c  csd-color-calibrate.h  csd-color-manager.c  csd-color-manager.h  csd-color-plugin.c  csd-color-plugin.h  csd-color-profiles.c  csd-color-profiles.h  csd-color-state.c  csd-color-state.h  csd-color.service.in  csd-color.target.in  csd-night-light-common.c  csd-night-light-common.h  csd-night-light.c  csd-night-light.h  csd-night-mode-common.c  csd-night-mode-common.h  csd-night-mode.c  csd-night-mode.h  gcm-dmi.c  gcm-dmi.h  gcm-edid.c  gcm-edid.h  gcm-profile-store.c  gcm-profile-store.h  gcm-self-test.c  generate-tz-header.py  gnome-datetime-source.c  gsd-color-manager.c  gsd-color-manager.h  gsd-color-plugin.c  (+7 more)
plugins/common/: Makefile.am  Makefile.in  csd-input-helper.c  csd-input-helper.h  csd-keygrab.c  csd-keygrab.h  csd-power-helper.c  csd-power-helper.h  (+17 more)
(+598 files in other folders)
