option(
    'dbus_service_dir',
    type: 'string',
    value: '',
    description: 'Used to specify the dbus service dir'
)
option(
    'dbus_system_dir',
    type: 'string',
    value: '',
    description: 'Used to specify the dbus system dir'
)
option(
    'use_polkit',
    type: 'feature',
    value: 'auto',
    description: 'Whether to use polkit in the build'
)
option(
    'use_logind',
    type: 'feature',
    value: 'auto',
    description: 'Whether to use logind in the build'
)
option(
    'use_gudev',
    type: 'feature',
    value: 'enabled',
    description: 'Whether GUdev support should be enabled (not optional on Linux platforms)'
)
option(
    'use_cups',
    type: 'feature',
    value: 'enabled',
    description: 'Whether cups (and therefore the print notifications plugin) support should be enabled'
)
option(
    'use_smartcard',
    type: 'feature',
    value: 'enabled',
    description: 'Set to false to disable smartcard support'
)
option(
    'use_color',
    type: 'feature',
    value: 'enabled',
    description: 'Whether the color plugin should be enabled'
)
option(
    'use_wacom',
    type: 'feature',
    value: 'auto',
    description: 'Whether the wacom plugin should be enabled'
)
option(
    'enable_debug',
    type: 'boolean',
    value: false,
    description: 'Show additional build warnings'
)
option(
    'generate_tz_coords',
    type: 'boolean',
    value: false,
    description: 'Generate TZCoords header from tzdata'
)
option(
    'zone_tab',
    type: 'string',
    value: '/usr/share/zoneinfo/zone.tab',
    description: 'Path to tzdata zone.tab or zone1970.tab'
)
